Project worndly {
  database_type: "SQLite"
  Note: "Current worNDly storage design based on the Django models in src/worndly/models.py."
}

Table auth_user {
  id integer [pk, increment]
  username varchar(150) [not null, unique]
  email varchar(254) [not null]
  password varchar(128) [not null]
  Note: "Django built-in user table used for authentication and account identity."
}

Table player_profile {
  id integer [pk, increment]
  user_id integer [not null, unique, ref: > auth_user.id]
  name varchar(120) [note: "Optional display name"]
  extra_plays_remaining integer [not null, default: 0]
  created_at datetime [not null]
  updated_at datetime [not null]
  Note: "Application-specific profile data for a player."
}

Table game {
  id integer [pk, increment]
  player_id integer [not null, ref: > auth_user.id]
  language varchar(2) [not null, note: "en, es, fr, de, pt"]
  target_word varchar(5) [not null]
  won boolean [note: "Null until the game is finished"]
  attempts integer [not null, default: 0]
  created_at datetime [not null]
  Note: "A gameplay session associated with one authenticated user."
}

Table guess {
  id integer [pk, increment]
  game_id integer [not null, ref: > game.id]
  word varchar(5) [not null]
  result varchar(5) [not null, note: "Per-letter feedback such as GXYXG"]
  created_at datetime [not null]
  Note: "A single guessed word within a game."
}
